[b][color=orange]v3.23[/color], 01.04.2018[/b][list]
[*]Removed a global string which broke other AddOns.[/list]

[b][color=orange]v3.22[/color], 01.04.2018[/b][list]
[*]Change the right and left ActionBar layout.
[*]Prevent a nil error with the recent S&L changes for the Minimap buttons.
[*]Create an own Minimap Button bar.
[*]Update the BigWigs Profile.
[*]Add an shadowoverlay to my UI. Which makes the UI darker. I love it!![/list]

[b][color=orange]v3.21[/color], 29.03.2018[/b][list]
[*]Dont set the ls_Skin automatic.
[*]Removed cargBags_Nivaya from the package.
[*]The SplashScreen now shows only once a day per char.
[*]Update the Garrison Capacitive Skin.
[*]Update the Party Layout. You have to do the install step for UnitFrames again.
[*]Prevent some lua errors if you click the MicroBar Buttons in combat.[/list]

[b][color=orange]v3.20[/color], 23.03.2018[/b][list]
[*]Add an itemlevel link feature. Shows the slot/item level on linked items in chat.
[*]Update a lot of skins.
[*]Change the default position for the WorldMap.
[*]Add the ls_Toast skin to my Plugin.
[*]Add my logo on the ElvUI config.
[*]Remove the custom Minimap blip textures.
[*]Remove my Expressway font.
[*]Remove the move Blizz function.
[*]The Teleport menu will now only show one of general "Hearthstone" items.
[*]Included an edited version of cargBags_Nivaya.[/list]

[b][color=orange]v3.19[/color], 30.01.2018[/b][list]
[*]Add an EquipSet Bar. Thx Azilroka for this <3
[*]Fix Party/Raid position for high resolutions.
[*]Update BigWigs Skin. No Half-Bar anymore.
[*]Replace the Quest button with a Talent button in the MicroBar.
[*]Don't hide the AFK options if BenikUI is loaded.
[*]Add new font settings for S&L (its not live yet), will error out.
[*]Fixed the option for the MerchantItemLevel.[/list]

[b][color=orange]v3.18[/color], 26.01.2018[/b][list]
[*]Changed the middle Datatext framestrata.
[*]Add an option to disable the Infotexts style.
[*]Show the option to disable my AFK Screen.