@@ -1,3 +1,12 @@
+** v3.24, 07.04.2018**
+* Follow the recent BigWigs API changes and BigWigs Skin update.
+* Add chat commands: /cleanboa = Remove Heirlooms from your bag.
+*    /repop, /release = Release spirit if the dialog doesn't show up.
+* Adjust the pet Frame position.
+* Let the minimap border blink, if you have new mail/invites. :>
+* Create a button glow animation.
+* Adjust the Style Panel size for bigger resolutions.
+
 ** v3.23, 01.04.2018**
 * Removed a global string which broke other AddOns.
 
