@@ -1,3 +1,12 @@
+[b][color=orange]v3.24[/color], 07.04.2018[/b][list]
+[*]Follow the recent BigWigs API changes and BigWigs Skin update.
+[*]Add chat commands: /cleanboa = Remove Heirlooms from your bag.
+[*]   /repop, /release = Release spirit if the dialog doesn't show up.
+[*]Adjust the pet Frame position.
+[*]Let the minimap border blink, if you have new mail/invites. :>
+[*]Create a button glow animation.
+[*]Adjust the Style Panel size for bigger resolutions.
+
 [b][color=orange]v3.23[/color], 01.04.2018[/b][list]
 [*]Removed a global string which broke other AddOns.[/list]
 
